syntax = "proto3";

package sync;
option go_package = "./proto;proto";

service SyncService {
  rpc Connect(stream FileChange) returns (stream FileChange);
}

message FileChange {
  string client_id = 1;
  string filename = 2;
  string action = 3; // create, update, delete
  int64 timestamp = 4;
  bytes content = 5;
}

message Ack {
  string status = 1;
}
